# python-sdk

./: .gitattributes  .gitignore  .isort.cfg  .readthedocs.yml  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt  ruff.toml  setup.py  test.py  test_autoposter.py  test_import.py
.github/workflows/: python-package.yml  python-publish.yml  release.yml  test.yml
dbl/: __init__.py  client.py  errors.py  http.py  ratelimiter.py  webhook.py
docs/: Makefile  api.rst  client.rst  conf.py  data.rst  examples.rst  exceptions.rst  index.rst  make.bat  models.rst  raw-api-reference.rst  repository.rst  requirements.txt  support-server.rst  support.rst  webhooks.rst  whats-new.rst  whats_new.rst
docs/_static/: script.js  style.css
docs/_static/css/: custom.css  customtheme.css
docs/api/: autopost.rst  client.rst  data.rst  errors.rst  index.rst  project.rst  types.rst  user.rst  webhook.rst  widget.rst
docs/examples/: discord_py.rst  hikari.rst  index.rst
examples/commands_to_topgg_example/: README.md  main.py  requirements.txt
examples/discordpy_example/: __main__.py  requirements.txt
examples/discordpy_example/callbacks/: autopost.py  webhook.py
examples/hikari_example/: __main__.py  requirements.txt
examples/hikari_example/callbacks/: autopost.py  webhook.py
examples/hikari_example/events/: autopost.py  webhook.py
scripts/: format.sh
tests/: requirements.txt  test_autopost.py  test_client.py  test_data_container.py  test_import.py  test_ratelimiter.py  test_type.py  test_version.py  test_webhook.py  test_webhooks.py  test_widget.py  util.py
tests/mocks/: 404.json  get_self.json  get_vote.json  get_votes.json  integration_create_payload.json  integration_delete_payload.json  post_announcement.json  test_payload.json  vote_create_payload.json
topgg/: __init__.py  autopost.py  client.py  data.py  errors.py  http.py  locale.py  models.py  payload.py  project.py  ratelimiter.py  types.py  user.py  util.py  version.py  webhook.py  webhooks.py  widget.py
