[build-system]
requires = ["setuptools"]

[project]
name = "topggpy"
version = "1.5.0"
description = "A simple API wrapper for Top.gg written in Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "null8626" }, { name = "Top.gg" }]
keywords = ["discord", "discord-bot", "topgg"]
dependencies = ["aiohttp>=3.13.0"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
requires-python = ">=3.10"

[project.urls]
Documentation = "https://topggpy.readthedocs.io/en/latest/"
"Raw API Documentation" = "https://docs.top.gg/docs/"
Repository = "https://github.com/top-gg-community/python-sdk"
"Support server" = "https://discord.gg/EYHTgJX"